--- a/package.json
+++ b/package.json
@@ -9,10 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
+    "cpf-cnpj-validator": "^1.0.3",
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.21.0",
+    "formik": "^2.2.9",
     "react": "18.2.0",
-    "react-native": "0.71.7"
+    "react-hook-form": "^7.43.9",
+    "react-native": "0.71.7",
+    "react-native-animatable": "^1.3.3",
+    "react-native-check-box": "^2.1.7",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-linear-gradient": "^2.6.2",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "regexp": "^1.0.0",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
